# Ising

./: Cutdown.lhs  Diagrams.hs  Ising.bib  Ising.cabal  Ising.hs  Ising.lhs  README.md  Tests.hs  VectorPerf.hs  VectorPerf2.hs
