name:                Ising
version:             0.1.0.0
synopsis:            An Ising Model in Haskell
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
copyright:           Dominic Steinitz
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Ising
  main-is:             Ising.lhs
  other-extensions:    TypeFamilies,
                       NoMonomorphismRestriction,
                       BangPatterns,
                       TemplateHaskell,
                       QuasiQuotes
  build-depends:       base >=4.6 && <4.7,
                       vector >=0.10 && <0.11,
                       random-source >=0.3 && <0.4,
                       random-fu >=0.2 && <0.3,
                       mtl >=2.1 && <2.2,
                       split >=0.2 && <0.3,
                       diagrams-lib >=1.0 && <1.1,
                       diagrams-cairo >=1.0 && <1.1,
                       Chart-cairo >=1.1 && <1.2,
                       lens >=3.10 && <3.11,
                       Chart >=1.1 && <1.2,
                       data-default-class >=0.0 && <0.1,
                       diagrams-svg >=1.0 && <1.1,
                       repa >=3.2 && <3.3,
                       template-haskell >=2.8 && <2.9,
                       HUnit >=1.2 && <1.3,
                       tasty >=0.4 && <0.5,
                       parallel >= 3.2 && < 3.3
  default-language:    Haskell2010